...

class SettingsViewController: UIViewController, UITableViewDelegate, UITableViewDataSource, MFMailComposeViewControllerDelegate {

    //MARK: Properties
    var stateController: StateController?
    
    let sectionTitles = [ "Tab Bar",
                          "Gestures",
                          "Customization",
                          "Calculation History",
                          "About the app",
                          "Support",
                          "Privacy" ]
    let rowsPerSection = [4, 2, 3, 3, 4, 3, 1]
    
    let supportURLs = [ "https://anthony55hopkins.wixsite.com/hexacalc/privacy-policy",
...
            self.preferences.pasteActionIndex = self.stateController?.convValues.pasteActionIndex ?? 1
            self.preferences.setCalculatorTextColour = self.stateController?.convValues.setCalculatorTextColour ?? false
            self.preferences.colour = self.stateController?.convValues.colour ?? .systemGreen
        }

        // Set custom back button text to navigationItem
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "Settings", style: .plain, target: nil, action: nil)
        self.navigationController?.navigationBar.prefersLargeTitles = true
    }
    
    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
        tableView.frame = view.bounds
...
        case 0:
            // Hexadecimal
            if indexPath.row == 0 {
                // Show switch
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "HexadecimalSwitch", for: indexPath) as! SwitchTableViewCell
                cell.configure(isOn: preferences.hexTabState, colour: self.preferences.colour)
                cell.textLabel?.text = "Hexadecimal"
                cell.self.cellSwitch.addTarget(self, action: #selector(self.hexadecimalSwitchPressed), for: .touchUpInside)
                return cell
            }
            // Binary
            else if indexPath.row == 1 {
                // Show switch
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "BinarySwitch", for: indexPath) as! SwitchTableViewCell
                cell.configure(isOn: preferences.binTabState, colour: self.preferences.colour)
                cell.textLabel?.text = "Binary"
                cell.self.cellSwitch.addTarget(self, action: #selector(self.binarySwitchPressed), for: .touchUpInside)
                return cell
            }
            // Decimal
            else if indexPath.row == 2 {
                // Show switch
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "DecimalSwitch", for: indexPath) as! SwitchTableViewCell
                cell.configure(isOn: preferences.decTabState, colour: self.preferences.colour)
                cell.textLabel?.text = "Decimal"
                cell.self.cellSwitch.addTarget(self, action: #selector(self.decimalSwitchPressed), for: .touchUpInside)
                return cell
            }
            // Default tab
            else {
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "DefaultTabSelection", for: indexPath) as! SelectionSummaryTableViewCell
                cell.configure(rightText: DefaultTabViewConverter.getViewFromIndex(index: Int(self.preferences.defaultTabIndex)), colour: UIColor.systemGray)
                cell.textLabel?.text = "Override Default Selected Tab"
                return cell
            }
        // Gestures section
        case 1:
            // Copy action
            if indexPath.row == 0 {
...
        case 2:
            // Set calculator text colour
            if indexPath.row == 1 {
                // Show switch for set calculator text colour
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "SetCalculatorColourSwitch", for: indexPath) as! SwitchTableViewCell
                cell.configure(isOn: self.preferences.setCalculatorTextColour, colour: preferences.colour)
                cell.textLabel?.text = "Set Calculator Text Colour"
                cell.self.cellSwitch.addTarget(self, action: #selector(self.setCalculatorTextColourSwitchPressed), for: .touchUpInside)
                return cell
            }
            // Liquid glass buttons toggle
            else if indexPath.row == 2 {
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "LiquidGlassSwitch", for: indexPath) as! SwitchTableViewCell
...
            }
            // Select colour preference
            else {
                // Show summary detail view for colour selection
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "ColourSelection", for: indexPath) as! SelectionSummaryTableViewCell
                cell.configure(rightText: ColourNumberConverter.getColourNameFromIndex(index: Int(self.preferences.colourNum)), colour: UIColor.systemGray)
                cell.textLabel?.text = "Colour"
                return cell
            }
        // Calculation history section
        case 3:
            // History enabled toggle
            if indexPath.row == 0 {
...
                cell.alpha = preferences.historyEnabled ? 1.0 : 0.4
                return cell
            }
            // Clear local history
            else {
                let cell = self.tableView.dequeueReusableCell(withIdentifier: "ClearHistory", for: indexPath) as! TextTableViewCell
                cell.textLabel?.text = "Clear Local History"
                cell.textLabel?.textColor = preferences.historyEnabled ? preferences.colour : .systemGray
                cell.isUserInteractionEnabled = preferences.historyEnabled
                cell.alpha = preferences.historyEnabled ? 1.0 : 0.4
                return cell
            }
        // About the app section
...
    // method to run when table view cell is tapped
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        // Override default selected tab
        if indexPath.section == 0 && indexPath.row == 3 {
            // Navigate to Override default selected tab view
            if let _ = tableView.cellForRow(at: indexPath), let destinationViewController = navigationController?.storyboard?.instantiateViewController(withIdentifier: SettingsSelectionViewController.identifier) as? SettingsSelectionViewController {
                destinationViewController.selectionList = ["Hexadecimal", "Binary", "Decimal", "Off"]
                destinationViewController.preferences = self.preferences
                destinationViewController.selectedIndex = Int(self.preferences.defaultTabIndex)
                destinationViewController.selectionType = SelectionType.defaultTabIndex
                destinationViewController.stateController = stateController
                destinationViewController.name = "Default Selected Tab"
                
...
                navigationController?.pushViewController(destinationViewController, animated: true)
            }
        }
        // Navigate to colour selection view
        if indexPath.section == 2 && indexPath.row == 0 {
            if let _ = tableView.cellForRow(at: indexPath), let destinationViewController = navigationController?.storyboard?.instantiateViewController(withIdentifier: SettingsSelectionViewController.identifier) as? SettingsSelectionViewController {
                destinationViewController.selectionList = ["Red", "Orange", "Yellow", "Green", "Blue", "Teal", "Indigo", "Violet", "Pink", "Brown"]
                destinationViewController.preferences = self.preferences
                destinationViewController.selectedIndex = self.preferences.colourNum == -1 ? 3 : Int(self.preferences.colourNum)
                destinationViewController.selectionType = SelectionType.colour
                destinationViewController.stateController = stateController
                destinationViewController.name = "Colour"
                
...
