...
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                    </stackView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.25" translatesAutoresizingMaskIntoConstraints="NO" id="Z7g-zo-MXa">
                                        <rect key="frame" x="185.33333333333334" y="232.33333333333329" width="43.666666666666657" height="102.66666666666666"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Hexadecimal Output Label" label="hexadecimalOutputLabel">
                                            <accessibilityTraits key="traits" staticText="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="75"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                    </stackView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstr
                                        <rect key="frame" x="-202" y="367.66666666666669" width="818" height="27.333333333333314"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Binary Output Label" label="binaryOutputLabel"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xK1-KZ-eDg">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
...
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                    </stackView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="a2J-4m-Np0">
                                        <rect key="frame" x="185.33333333333334" y="272.33333333333331" width="43.666666666666657" height="102.66666666666669"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Decimal Output Label" label="decimalOutputLabel"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="75"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPw-Rk-P2m">
                                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
...
